Fixing layout on smaller screens

--- a/css/custom-portfolio.css
+++ b/css/custom-portfolio.css
@@ -374,3 +374,10 @@ h4 {
   border-radius: 2px;
   color: white;
 }
+
+@media (max-width: 460px) {
+  .ui.horizontal.segments {
+    display: flex;
+    flex-direction: column;
+  }
+}
